Bug#42725 "Exception when filling I_S.TABLESPACES by Falcon" Bug#42830 "Falcon Exception: ResultSet has been closed after recovery"

The exception occurs because the system transaction is committed
while the result set is being accessed. The commit closes the
statement and clears the associated result sets.

To prevent this, the tablespace getinfo methods now get a
shared lock on syncSysDDL before executing queries.

Database::openDatabase also gets a shared lock on syncSysDDL
prior to executing query and processing the result set. Note that
this issue was indirectly addressed by disabling scavenging during
recovery: http://lists.mysql.com/commits/66823.